# milon-exercise-engine

./: .gitignore  AGENTS.md  README.md  app.py  excercise_readme.md  flow.md  main.py  milon-exercise-engine.code-workspace  pyproject.toml  requirements.txt  train.py
configs/: legraise.yaml
core/: __init__.py  exercise_base.py  legraise_counter.py  pose_estimator.py  pushup_counter.py  squat_counter.py  visualizer.py
milon_engine/: __init__.py
milon_engine/configs/: pushup.yaml  squat.yaml
milon_engine/core/: __init__.py  frame_processor.py  models.py  pose_estimator.py  visualizer.py
milon_engine/exercises/: __init__.py  base.py  legraise.py  pushup.py  squat.py
milon_engine/utils/: config.py
notebooks/: 00_mediapipe_pose_test.ipynb  01_pose_estimation_baseline.ipynb  main.py  test_package.ipynb
outputs/calibration/: legraise.yaml  pushup.yaml  squat.yaml
